package app.dtos;

public class MovieDTO {

}
