package app.entities;

public enum Role {
    ACTOR,DIRECTOR,BOTH
}
